# rm-rs

./: Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh
.github/workflows/: cd.yml  ci.yml
npm/: .gitignore  generate-packages.sh  template.package.json
npm/rm-rs/: package.json  pnpm-lock.yaml  tsconfig.json
npm/rm-rs/src/: index.ts
src/: core.rs  lib.rs  main.rs  safety.rs
tests/: cli.rs
