[package]
name = "rm-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A cross-platform alternative to `rm`"
repository = "https://github.com/niss36/rm-rs"
categories = ["command-line-utilities"]
keywords = ["rm", "delete", "file", "directory", "recursive"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
path-absolutize = "3.1.1"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
